2019-10-06  T.Küchel  <devel@zukuul.de>

	* updated version upstream, really use 7.3.10 in the name tag

2019-09-26  T.Küchel  <devel@zukuul.de>

	* new php version upstream, fix: really use the new 7.3.9 version
